--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -18,6 +18,7 @@
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Height="434" VerticalAlignment="Top">
                 <StackPanel Orientation="Vertical" Width="200" Height="435">
+                    <Button Background="OliveDrab" Content="All Items" MinHeight="50" MinWidth="100" Margin="5 5" Command= "{Binding AllItemsButtonClick}"/>
                     <Button Background="OliveDrab" Content="Apples" MinHeight="50" MinWidth="100" Margin="5 5" Command= "{Binding AppleButtonClick}"/>
                     <Button Background="OliveDrab" Content="Carrots" MinHeight="50" MinWidth="100" Margin="5 5" Command= "{Binding CarrotButtonClick}"/>
                     <Button Background="OliveDrab" Content="Pears" MinHeight="50" MinWidth="100" Margin="5 5" Command= "{Binding PearButtonClick}"/>
@@ -45,14 +46,14 @@
         <Canvas Background="DarkSeaGreen" x:Name="ShoppingCartView" Visibility="{Binding CartViewVisibility}">
             <StackPanel Orientation="Horizontal">
                 <StackPanel Orientation="Vertical" Width="137">
-                    <Button Background="DarkOliveGreen" Content="Home Page" MinHeight="50" MinWidth="100" Margin="5 5" Command= "{Binding MainPageButtonClick}"/>
+                    <Button Background="DarkOliveGreen" Content="Item Page" MinHeight="50" MinWidth="100" Margin="5 5" Command= "{Binding MainPageButtonClick}"/>
                 </StackPanel>
                 <StackPanel Width="505" >
                     <ScrollViewer Height="414" Width="422">
                         <ItemsControl ItemsSource="{Binding ShoppingCart.Items}" Width="435" Height="526">
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
-                                    <Button Background="OliveDrab"  Width="200" Height="50">
+                                    <Button Background="OliveDrab"  Width="200" Height="50" >
                                         <StackPanel Orientation="Horizontal">
                                             <TextBlock VerticalAlignment="Center" FontSize="15" Margin="5 5" Text="{Binding Name}"/>
                                             <TextBlock VerticalAlignment="Center" FontSize="15" Margin="5 5" Text="{Binding Price, StringFormat=0.00 zl}"/>
