Small changes in MainWindow

--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -13,20 +13,7 @@
     <Grid Background="DarkSeaGreen">
         <Canvas x:Name="MainView" Visibility="{Binding MainViewVisibility}">
 
-            <Button Background="DarkOliveGreen" Content="Cart" MinHeight="50" MinWidth="100" Command= "{Binding CartButtonClick}" 
-                    HorizontalAlignment="Left" Canvas.Left="690" Canvas.Top="5" VerticalAlignment="Center" Width="84"/>
 
-            <Button Content="{Binding ConnectButtonText}" MinHeight="50" MinWidth="100" Command= "{Binding ConnectButtonClick}" 
-                    HorizontalAlignment="Left" Canvas.Left="690" Canvas.Top="75" VerticalAlignment="Center" Width="84" Background="DarkOliveGreen">
-                <Button.RenderTransform>
-                    <TransformGroup>
-                        <ScaleTransform ScaleY="1"/>
-                        <SkewTransform/>
-                        <RotateTransform/>
-                        <TranslateTransform/>
-                    </TransformGroup>
-                </Button.RenderTransform>
-            </Button>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Height="434" VerticalAlignment="Top">
                 <StackPanel Orientation="Vertical" Width="200" Height="435">
                     <Button Background="OliveDrab" Content="All Items" MinHeight="50" MinWidth="100" Margin="5 5" Command= "{Binding AllItemsButtonClick}"/>
@@ -51,6 +38,14 @@
                             </ItemsControl.ItemTemplate>
                         </ItemsControl>
                     </ScrollViewer>
+                </StackPanel>
+                <StackPanel>
+                    <Button Background="DarkOliveGreen" Content="Cart" MinHeight="50" MinWidth="100" Margin="5 5" Command= "{Binding CartButtonClick}" 
+                    HorizontalAlignment="Left" Canvas.Left="690" Canvas.Top="5" VerticalAlignment="Center" Width="84"/>
+
+                    <Button Content="{Binding ConnectButtonText}" MinHeight="50" MinWidth="100" Margin="5 5" Command= "{Binding ConnectButtonClick}" 
+                    HorizontalAlignment="Left" Canvas.Left="690" Canvas.Top="75" VerticalAlignment="Center" Width="84" Background="DarkOliveGreen">
+                    </Button>
                 </StackPanel>
             </StackPanel>
         </Canvas>
